--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
    
-<div class="top_foouter">
+<div class="top_footer">
         <h1 class="comp_name">mwansa</h1> 
 
         <div class="top-searc">
@@ -23,10 +23,10 @@
     
         </div>
     <div class="tools-1">
-      <a class="active" href="home.html">Home</a>
+      <a class="active" href="https://mwansamuloboka.wordpress.com">Home</a>
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="AboutUs.html">About</a>
     </div>
 </div>
     
